fix: ui fix for labeled dropdown and input alignment

--- a/components/VendorComps/vendorComps.module.scss
+++ b/components/VendorComps/vendorComps.module.scss
@@ -1367,7 +1367,7 @@
     width: 33%;
 
     .currencyDropDown {
-      margin-top: 10px;
+      margin-top: 12px;
     }
   }
 
@@ -1375,7 +1375,7 @@
     width: 33%;
 
     .unitDropDown {
-      margin-top: 10px;
+      margin-top: 12px;
     }
   }
 }
